--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -195,6 +195,10 @@ input {
     list-style: none;
     margin: 0 0 18px 0;
   }
+  li {
+    padding-left: 20px;
+    list-style: disc inside none;
+  }
 }
 
 .field_with_errors {
