--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,7 +14,10 @@
   <div class="span8">
     <%= render 'follow_form' if signed_in? %>
     <% if @user.microposts.any? %>
+        <span>
         <h3>Microposts (<%= @user.microposts.count %>)</h3>
+        <%= link_to "RSS Feed", user_url(@user, :rss) %>
+        </span>  
         <ol class="microposts">
             <%= render @microposts %>
         </ol>
